responsiveness correction on smaller screens

--- a/style.css
+++ b/style.css
@@ -64,13 +64,15 @@ nav {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  height: 10vh;
+  height: 100%;
+  min-height: 15vh;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .nav--list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .nav--list li {
@@ -160,7 +162,7 @@ input[type='email'] {
   padding: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   font-weight: 100;
   background-color: #0e022e;
@@ -270,7 +272,8 @@ input[type='email'] {
 
 .footer {
   width: 100%;
-  height: 5vh;
+  height: 100%;
+  padding: 24px;
   background-color: #0e022e;
   color: white;
   border-top: 2px solid #10003c;
@@ -305,8 +308,8 @@ input[type='email'] {
 
   .email--container p,
   input {
-    font-size: 9px;
-    padding: 1px;
+    font-size: 1rem;
+    padding: 0;
     margin: 0;
   }
   .email--container input[type='text'],
@@ -317,6 +320,10 @@ input[type='email'] {
   .card--container {
     justify-content: center;
     align-items: center;
+  }
+
+  .friday--container h1 img {
+    height: 62px;
   }
 }
 
@@ -344,7 +351,8 @@ input[type='email'] {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    height: 20vh;
+    height: 100%;
+    padding: 12px;
   }
 
   .email--container form {
@@ -368,28 +376,13 @@ input[type='email'] {
   }
 
   .card {
-    width: 500px;
-    height: 500px;
-    margin-top: 20%;
-    padding: 5px;
-    border: 1px solid black;
+    width: calc(80%);
+    padding: 8px;
   }
 
   .product--name,
   .product--sale {
     margin: 1px;
-    font-weight: 100;
-  }
-
-  .description {
-    display: none;
-  }
-
-  .price {
-    display: none;
-  }
-
-  .card img {
-    width: 70%;
+    font-weight: 550;
   }
 }
